--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,8 @@
     </properties>
 
     <dependencies>
-        
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.17.2</version>
-        </dependency>
-        
-        <dependency>
+                
+        <!-- <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>5.2.2</version>
@@ -31,7 +25,7 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
             <version>5.2.2</version>
-        </dependency>
+        </dependency> -->
          
         <dependency>
             <groupId>org.apache.hbase</groupId>
